Enable Force FastCharge

--- a/arch/arm/configs/pxa986_goldennf_rev02_defconfig
+++ b/arch/arm/configs/pxa986_goldennf_rev02_defconfig
@@ -2772,6 +2772,7 @@ CONFIG_NLS_UTF8=y
 #
 CONFIG_PRINTK_TIME=y
 CONFIG_PRINTK_CPU_ID=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_PRINTK_PID=y
 CONFIG_PRINTK_COMM=y
 CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
