--- a/arch/arm/mach-mmp/Makefile
+++ b/arch/arm/mach-mmp/Makefile
@@ -157,3 +157,6 @@ obj-$(CONFIG_SEC_DEBUG)		+= sec_debug.o
 obj-$(CONFIG_SEC_LOG)		+= sec_log.o
 
 obj-$(CONFIG_SEC_THERMISTOR) += sec_thermistor.o
+	  
+# Fast Charge
+obj-$(CONFIG_FORCE_FAST_CHARGE) += fastchg.o
