Enable CPU POWER

--- a/arch/arm/configs/pxa986_goldennf_rev02_defconfig
+++ b/arch/arm/configs/pxa986_goldennf_rev02_defconfig
@@ -2573,6 +2573,7 @@ CONFIG_ANDROID_OOM_KILLER=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 # CONFIG_RTC_CHN_ALARM_BOOT is not set
 # CONFIG_PHONE is not set
+CONFIG_CPUPOWER=y
 CONFIG_CLKDEV_LOOKUP=y
 
 #
