Add Intelli_Hotplug from faux123

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1476,6 +1476,7 @@ config PJ4B_ERRATA_6409
 endmenu
 
 source "arch/arm/common/Kconfig"
+source "arch/arm/hotplug/Kconfig"
 
 menu "Bus support"
 
