--- a/arch/arm/configs/pxa986_goldennf_rev02_defconfig
+++ b/arch/arm/configs/pxa986_goldennf_rev02_defconfig
@@ -452,6 +452,7 @@ CONFIG_ARM_ERRATA_764369=y
 # CONFIG_ARM_ERRATA_775420 is not set
 CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
+CONFIG_INTELLI_PLUG=y
 
 #
 # Bus support
@@ -600,6 +601,7 @@ CONFIG_HAVE_AOUT=y
 #
 # Power management options
 #
+CONFIG_POWERSUSPEND=y
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
 CONFIG_HAS_WAKELOCK=y
