--- a/arch/arm/configs/pxa986_goldennf_rev02_defconfig
+++ b/arch/arm/configs/pxa986_goldennf_rev02_defconfig
@@ -979,8 +979,8 @@ CONFIG_RFKILL_LEDS=y
 # Near Field Communication (NFC) devices
 #
 # CONFIG_PN544_NFC is not set
-# CONFIG_NFC=y
-# CONFIG_NFC_PN547=y
+CONFIG_NFC=y
+CCONFIG_NFC_PN547=y
 
 #
 # Device Drivers
