--- a/arch/arm/configs/pxa986_goldennf_rev02_defconfig
+++ b/arch/arm/configs/pxa986_goldennf_rev02_defconfig
@@ -980,7 +980,7 @@ CONFIG_RFKILL_LEDS=y
 #
 # CONFIG_PN544_NFC is not set
 CONFIG_NFC=y
-CCONFIG_NFC_PN547=y
+CONFIG_NFC_PN547=y
 
 #
 # Device Drivers
